# PhantomAnalysis

./: .gitignore  LICENSE  README.md  adc_vial_display.py  requirements.txt  test.py  test_dicom_util.py  test_radii_limits.py  test_scalar_analysis.py  test_thermometry.py  test_voi.py  thermo.py  vial_centers.py
phantom_analysis/: __init__.py  dicom_util.py  phantom_definitions.py  scalar_analysis.py  thermometry.py  voi_analysis.py
slicer_extension/: CMakeLists.txt
slicer_extension/phantom/: CMakeLists.txt  phantom.py  voi_labels.ctbl
